# gridway

./: .env.example  .gitignore  CLAUDE.md  CLAUDE.md.template  CODEOWNERS  Cargo.toml  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  NOTICE  PLAN.md  PR60_COMPLETION_SUMMARY.md  README-COMETBFT.md  README.md  SUMMARY.md  TEMPLATE_USAGE.md  TICK_TOCK_METHODOLOGY.md  WORKFLOW_SETUP.md  build.rs  docker-compose.multi.yml  docker-compose.yml  fix_all_txresponse.py  fix_baseapp.sh  fix_txresponse.py  fix_txresponse.sh  fix_txresponse_comprehensive.py  rustfmt.toml  setup.sh  wasm_modules.example.toml
.github/: labeler.yml
.github/workflows/: abci-integration.yml  all-checks.yml  build.yml  check.yml  ci.yml  claude-code-review.yml  claude.yml  claude_code.yml  cometbft-integration.yml  cometbft-integration.yml.disabled  cosmos-compatibility.yml  cosmos-compatibility.yml.disabled  coverage.yml  docker.yml  docs.yml  e2e-test.yml  fmt-lint.yml  pr-automation.yml  release.yml  stage-transition.yml  test.yml  testnet.yml  tick-ci.yml  tock-ci.yml  validate-pr.yml  wasm-build.yml  wasm-test.yml
crates/gridway-baseapp/: Cargo.toml  PLAN.md
crates/gridway-client/: PLAN.md
crates/gridway-crypto/: Cargo.toml  PLAN.md
crates/gridway-crypto/src/: keys.rs  lib.rs  multisig.rs  signature.rs  verify.rs
crates/gridway-errors/: Cargo.toml
crates/gridway-keyring/: Cargo.toml  PLAN.md
crates/gridway-log/: Cargo.toml
crates/gridway-log/src/: lib.rs
crates/gridway-math/: Cargo.toml
crates/gridway-math/src/: coin.rs  decimal.rs  lib.rs
crates/gridway-proto/: Cargo.toml
crates/gridway-proto/proto/cometbft/abci/v1/: types.proto
crates/gridway-proto/proto/cosmos/auth/v1beta1/: query.proto
crates/gridway-proto/proto/cosmos/tx/v1beta1/: tx.proto
crates/gridway-proto/src/: lib.rs
crates/gridway-server/: PLAN.md
crates/gridway-simapp/: Cargo.toml  PLAN.md
crates/gridway-simapp/src/: lib.rs
crates/gridway-store/: Cargo.toml  PLAN.md
crates/gridway-store/examples/: test_bank_scenario.rs  test_state_manager.rs
crates/gridway-store/src/: global.rs  jmt.rs  lib.rs  state.rs  storage.rs
crates/gridway-telemetry/: COSMOS_COMPATIBILITY.md  Cargo.toml
crates/helium-baseapp/: Cargo.toml  PLAN.md
crates/helium-baseapp/src/: abi.rs  abi_tests.rs  ante.rs  capabilities.rs  component_host.rs  converter.rs  kvstore_resource.rs  kvstore_resource_test.rs  lib.rs  lib.rs.bak  module_governance.rs  module_loader.rs  module_router.rs  prefixed_kvstore_resource.rs  test_component.rs  test_component_kvstore_integration.rs  test_kvstore_integration.rs  test_prefixed_kvstore.rs  test_wasi.rs  test_wasi_modules.rs  vfs.rs  wasi_host.rs
crates/helium-baseapp/src/component_bindings/: begin_blocker.rs  kvstore.rs  kvstore_simple.rs  mod.rs  module_state.rs  tx_decoder.rs
crates/helium-client/: Cargo.toml  PLAN.md
crates/helium-client/src/: cli.rs  config.rs  keys.rs  lib.rs  tx_builder.rs
crates/helium-codec/: Cargo.toml
crates/helium-codec/src/: lib.rs  protobuf.rs
crates/helium-crypto/: Cargo.toml
crates/helium-errors/: Cargo.toml
crates/helium-keyring/: Cargo.toml  PLAN.md
crates/helium-keyring/src/: backends.rs  file.rs  hd.rs  lib.rs
crates/helium-log/: Cargo.toml
crates/helium-log/src/: lib.rs
crates/helium-math/: Cargo.toml
crates/helium-proto/: Cargo.toml  build.rs
crates/helium-proto/proto/cosmos/tx/v1beta1/: service.proto
crates/helium-proto/proto/google/protobuf/: timestamp.proto
crates/helium-server/: Cargo.toml  PLAN.md  build.rs
crates/helium-server/examples/: abci_server.rs  grpc_server.rs  rest_server.rs
crates/helium-server/proto/cosmos/auth/v1beta1/: auth.proto
crates/helium-server/proto/cosmos/bank/v1beta1/: bank.proto  query.proto
crates/helium-server/proto/cosmos/base/abci/v1beta1/: abci.proto
crates/helium-server/proto/cosmos/base/query/v1beta1/: pagination.proto
crates/helium-server/proto/google/protobuf/: duration.proto
crates/helium-server/src/: abci_server.rs  api_router.rs  config.rs  consensus.rs  grpc.rs  health.rs  integrated_server.rs  lib.rs  rest.rs  snapshot.rs  swagger.rs  validators.rs
crates/helium-server/src/grpc/: services.rs
crates/helium-server/src/services/: auth.rs  bank.rs  mod.rs  tx.rs
crates/helium-simapp/: Cargo.toml
crates/helium-store/: Cargo.toml  PLAN.md
crates/helium-store/examples/: test_bank_scenario.rs  test_state_manager.rs
crates/helium-store/src/: global.rs  jmt.rs  jmt_real.rs  lib.rs  state.rs  storage.rs  versioned.rs
crates/helium-telemetry/: COSMOS_COMPATIBILITY.md  Cargo.toml
crates/helium-telemetry/src/: http.rs  lib.rs  metrics.rs  registry.rs  types.rs
crates/helium-types/: Cargo.toml
crates/helium-types/src/: address.rs  config.rs  context.rs  error.rs  genesis.rs  lib.rs  protobuf.rs  tx.rs
crates/helium-types/src/msgs/: bank.rs  mod.rs
crates/wasi-modules/ante-handler/: Cargo.toml  build.sh
crates/wasi-modules/ante-handler/src/: lib.rs
crates/wasi-modules/begin-blocker/: Cargo.toml  build.sh
crates/wasi-modules/begin-blocker/src/: lib.rs
crates/wasi-modules/end-blocker/: Cargo.toml  build.sh
crates/wasi-modules/end-blocker/src/: lib.rs
crates/wasi-modules/tx-decoder/: Cargo.toml  build.sh
crates/wasi-modules/tx-decoder/src/: lib.rs
docs/: cometbft-integration.md  cosmos-sdk-compatibility.md
docs/adr/: 001-tick-tock-methodology.md
docs/architecture/: ADR-001-determinism-challenge.md  ADR-003-ecosystem-integration.md  (+1 more)
examples/: README.md  cosmos_compatible_metrics.rs  counter_client.rs  counter_module.rs  rest_gateway_demo.rs  simple_app.rs  test_abi_host_functions.rs
scripts/: build-wasi-modules.sh  generate-claude-md.py  init-multi-testnet.sh  init-testnet.sh  reset-testnet.sh  start-testnet.sh  tick-command.sh  tock-command.sh
src/: main.rs
tests/: cli_tests.rs  test_tick_tock.sh
tick-tock-content/: common-content.md  tick-content.md  tock-content.md
wit/: ante-handler.wit  begin-blocker.wit  end-blocker.wit  module.wit  tx-decoder.wit
workflow-files/: stage-transition.yml  tick-ci.yml  tock-ci.yml
(+75 files in other folders)
