[package]
name = "gridway-crypto"
version = "0.1.0"
edition = "2021"
authors = ["mconcat"]
license = "AGPL-3.0"
description = "Cryptographic primitives for gridway"
repository = "https://github.com/mconcat/gridway"

[dependencies]
gridway-types = { path = "../gridway-types" }
k256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = "2.1"
sha2 = "0.10"
ripemd = "0.1"
signature = "2.2"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
base64 = "0.22"
rand = "0.8"
