[package]
name = "gridway-math"
version = "0.1.0"
edition = "2021"
authors = ["mconcat"]
license = "AGPL-3.0"
description = "Mathematical types for gridway"
repository = "https://github.com/mconcat/gridway"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
rust_decimal = "1.35"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
