[package]
name = "gridway-proto"
version = "0.1.0"
edition = "2021"
authors = ["mconcat"]
description = "Protocol Buffer definitions for Gridway blockchain"
repository = "https://github.com/mconcat/gridway"
license = "AGPL-3.0"

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", features = ["prost", "codegen"] }
bytes = "1.8"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"