[package]
name = "helium-baseapp"
version = "0.1.0"
edition = "2021"
authors = ["mconcat"]
license = "AGPL-3.0"
repository = "https://github.com/mconcat/helium"
description = "Base application framework for the helium blockchain"

[dependencies]
helium-store = { path = "../helium-store" }
helium-types = { path = "../helium-types" }
helium-crypto = { path = "../helium-crypto" }
helium-proto = { path = "../helium-proto" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
cometbft = "0.1.0-alpha.2"
k256 = "0.13"
hex = "0.4"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
toml = "0.8"
# WASI runtime dependencies
prost = "0.12"
wasmtime = "26.0"
wasmtime-wasi = "26.0"
wasmparser = "0.218"
cap-std = "3.0"
tracing = "0.1"
anyhow = "1.0"
base64 = "0.22"
log = "0.4"

[dev-dependencies]
wat = "1.0"
tempfile = "3.0"
