[package]
name = "helium-client"
version = "0.1.0"
edition = "2021"
authors = ["mconcat"]
license = "AGPL-3.0"
repository = "https://github.com/mconcat/helium"
description = "Client library for interacting with the helium blockchain"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.4"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
helium-keyring = { path = "../helium-keyring" }
rpassword = "7.3"
dirs = "5.0"

# Add helium dependencies for transaction building
helium-types = { path = "../helium-types" }
helium-crypto = { path = "../helium-crypto" }
helium-math = { path = "../helium-math" }
helium-log = { path = "../helium-log" }
tracing = "0.1"
toml = "0.8"
prost = "0.12"

[dev-dependencies]
tempfile = "3.14"
