[package]
name = "helium-codec"
version = "0.1.0"
edition = "2021"
authors = ["mconcat"]
license = "AGPL-3.0"
repository = "https://github.com/mconcat/helium"
description = "Encoding and decoding utilities for the helium blockchain framework"

[dependencies]
prost = "0.12"
prost-types = "0.12"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
