[package]
name = "helium-keyring"
version = "0.1.0"
edition = "2021"
authors = ["mconcat"]
license = "AGPL-3.0"
description = "Key management for helium"
repository = "https://github.com/mconcat/helium"

[dependencies]
helium-crypto = { path = "../helium-crypto" }
helium-types = { path = "../helium-types" }
bip39 = "2.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["fs", "sync", "rt", "macros", "time"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
base64 = "0.22"
dirs = "5.0"
hex = "0.4"
k256 = "0.13"
ed25519-dalek = "2.1"
sha2 = "0.10"
hmac = "0.12"
tracing = "0.1"
keyring = "3.6"

[dev-dependencies]
tempfile = "3.14"
