[package]
name = "helium-server"
version = "0.1.0"
edition = "2021"
authors = ["mconcat"]
license = "AGPL-3.0"
repository = "https://github.com/mconcat/helium"
description = "Server components and utilities for the helium blockchain"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "limit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"

# Local crate dependencies
helium-store = { path = "../helium-store" }
helium-types = { path = "../helium-types" }
helium-baseapp = { path = "../helium-baseapp" }
helium-math = { path = "../helium-math" }
helium-log = { path = "../helium-log" }
helium-telemetry = { path = "../helium-telemetry" }

[dev-dependencies]
tracing-subscriber = "0.3"

[[bin]]
name = "helium-server"
path = "src/bin/helium-server.rs"

[build-dependencies]
tonic-build = "0.11"
