[package]
name = "helium-types"
version = "0.1.0"
edition = "2021"
authors = ["helium Contributors"]
license = "Apache-2.0"
description = "Core types for helium"
repository = "https://github.com/cosmos/helium-rust"

[dependencies]
helium-math = { path = "../helium-math" }
helium-store = { path = "../helium-store" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
bech32 = "0.11"
sha2 = "0.10"
ripemd = "0.1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"
