[package]
name = "ante-handler"
version = "0.1.0"
edition = "2021"
authors = ["Gridway Blockchain <contact@gridway.zone>"]
license = "Apache-2.0"
description = "WASI Ante Handler component for Gridway blockchain"

[dependencies]
wit-bindgen = { version = "0.36", features = ["default"] }
wit-bindgen-rt = { version = "0.36" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
signature = "2.2"
hex = "0.4"

[lib]
name = "ante_handler"
path = "src/lib.rs"
crate-type = ["cdylib"]

[package.metadata.component]
package = "gridway:framework"
target = { path = "../../../wit", world = "ante-handler-world" }

