[package]
name = "end-blocker"
version = "0.1.0"
edition = "2021"
authors = ["Gridway Blockchain <contact@gridway.zone>"]
license = "Apache-2.0"
description = "WASI EndBlock handler component for Gridway blockchain"

[dependencies]
wit-bindgen = { version = "0.36", features = ["default"] }
wit-bindgen-rt = { version = "0.36" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

[lib]
name = "end_blocker"
path = "src/lib.rs"
crate-type = ["cdylib"]

[package.metadata.component]
package = "gridway:framework"
target = { path = "../../../wit", world = "end-blocker-world" }

