[package]
name = "tx-decoder"
version = "0.1.0"
edition = "2021"
authors = ["Gridway Blockchain <contact@gridway.zone>"]
license = "Apache-2.0"
description = "WASI Transaction Decoder module for Gridway blockchain"

[dependencies]
wit-bindgen = { version = "0.36", features = ["default"] }
wit-bindgen-rt = { version = "0.36" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"

[lib]
name = "tx_decoder"
path = "src/lib.rs"
crate-type = ["cdylib"]

[package.metadata.component]
package = "gridway:framework"
target = { path = "../../../wit", world = "tx-decoder-world" }

